# gpac-test-code

./: CMakeLists.txt  FindGPAC.cmake  README.md  mp4parse.cpp
gpac-2.2.0/: CMakeLists.txt
gpac-2.2.0/include/gpac/: configuration.h  revision.h
gpac-2.2.0/lib/pkgconfig/: gpac.pc
libs/: CMakeLists.txt
libs/gpac-2.2.0/: CMakeLists.txt
libs/gpac-2.2.0/include/gpac/: configuration.h
libs/gpac-2.2.0/lib/: libgpac.so.12
libs/gpac-2.2.0/lib/pkgconfig/: gpac.pc
tests/: CMakeLists.txt  mp4parse.cpp  print_mp4_info.cpp
tests/include/: print_mp4_info.h
